log/build_2025-04-30_13-16-43/tape/stderr.log
  File "/home/kingpooper/deepRacerWS/install/tape/lib/python3.10/site-packages/tape/my_sexy_tape_follower.py", line 9
    linear = 
             ^
SyntaxError: invalid syntax

